# rpi-barcode-scanner

./: .gitignore  LICENSE  README.md  config.yml  display.py  guifw.py  hid.py  main.py  pyproject.toml  remoteview.py  settings.py  slow.py  state.py  tone.py  ui.py  ui_interface.py  util.py
fasthid/: NOTICE.md  __init__.py  keyboard.py
fasthid/hid/: keyboard.py  keycodes.py  read.py  write.py
vnc/: NOTICE.md  vncserver.py
vnc/pyvncs/: __init__.py  server.py
vnc/util/: bgr233_palette.py  common.py  rfb_bitmap.py
vnc/util/auth/: vnc_auth.py
vnc/util/encodings/: __init__.py  common.py  raw.py
