[project]
name = "rpi-barcode-scanner"
version = "0.1.0"
description = "Raspberry Pi Zero 2 Optical Barcode Scanner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adafruit-circuitpython-neopixel>=6.3.17",
    "adafruit-circuitpython-rgb-display>=3.14.1",
    "elevate>=0.1.3",
    "gpiozero>=2.0.1",
    "lgpio>=0.2.2.0",
    "loguru>=0.7.3",
    "picamera2>=0.3.27",
    "pillow>=11.3.0",
    "pydes>=2.0.1",
    "pyyaml>=6.0.2",
    "pyzbar>=0.1.9",
    "rpi-gpio>=0.7.1",
]
